# sinoalice

./: weapons.json
grid-optimizer/: Cargo.toml
grid-optimizer/src/: main.rs
log-scraper/: Cargo.toml
log-scraper/src/: adb.rs  main.rs  weapons.json
sinoalice-db-parser/: .gitignore  Cargo.toml
sinoalice-db-parser/src/: Weapons - SINoALICE Database.html  main.rs  parser.rs  ratios.rs
sinoalice-db-parser/src/parser/: c_aid_skill_parser.rs  c_skill_parser.rs
sinoalice_core/: Cargo.toml
sinoalice_core/src/: lib.rs
sinojsonutil/: Cargo.toml
sinojsonutil/src/: main.rs  weapons.json
