[package]
name = "log-scraper"
version = "0.1.0"
authors = ["Colin Redman <20376935+credman0@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
structopt = "0.3"
leptess = "0.11.0"
regex = "1"
sinoalice_core = { path = "../sinoalice_core" }
lazy_static = "1.4.0"
edit-distance = "2.1.0"
